testdata/baselines/reference/submodule/compiler/alwaysStrictModule2.errors.txt
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
a.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.
b.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== a.ts (1 errors) ====
    module M {
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }
    
==== b.ts (1 errors) ====
    module M {
        export function f2() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }